Bug 7802 - mod_ssl - ssl_engine_kernel.c won't compile
Summary: mod_ssl - ssl_engine_kernel.c won't compile
Status: CLOSED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: Other Modules (show other bugs)
Version: 2.0.35
Hardware: PC Linux
: P3 normal (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2002-04-06 22:37 UTC by Issac Goldstand
Modified: 2004-11-16 19:05 UTC (History)
0 users



Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Issac Goldstand 2002-04-06 22:37:45 UTC
Using:
OpenSSL 0.9.7-dev 24 Sep 2000
built on: Sun Apr  7 01:17:42 IDT 2002
platform: linux-elf
options:  bn(64,32) md2(int) rc4(idx,int) des(ptr,risc1,16,long) idea(int)
blowfish(idx) 
compiler: gcc -fPIC -DOPENSSL_THREADS -D_REENTRANT -DDSO_DLFCN -DHAVE_DLFCN_H
-DOPENSSL_NO_KRB5 -DL_ENDIAN -DTERMIO -O3 -fomit-frame-pointer -m486 -Wall
-DSHA1_ASM -DMD5_ASM -DRMD160_ASM
OPENSSLDIR: "/usr/local/httpd/ssl"

Configure line:
 ./configure --prefix=/usr/local/apache2 --enable-so --enable-rewrite
--enable-ssl --enable-http  --with-ssl=/usr/local/httpd

Error:
/bin/sh /home/issac/httpd-2.0.35/srclib/apr/libtool --silent --mode=compile gcc
 -g -O2 -pthread -DNO_DBM_REWRITEMAP    -DLINUX=2 -D_REENTRANT
-D_XOPEN_SOURCE=500 -D_BSD_SOURCE -D_SVID_SOURCE
-DAP_HAVE_DESIGNATED_INITIALIZER   -I. -I/home/issac/httpd-2.0.35/os/unix
-I/home/issac/httpd-2.0.35/server/mpm/prefork
-I/home/issac/httpd-2.0.35/modules/http -I/home/issac/httpd-2.0.35/modules/proxy
-I/home/issac/httpd-2.0.35/include -I/home/issac/httpd-2.0.35/srclib/apr/include
-I/home/issac/httpd-2.0.35/srclib/apr-util/include
-I/usr/local/httpd/include/openssl -I/usr/local/httpd/include
-I/home/issac/httpd-2.0.35/modules/dav/main
-I/home/issac/httpd-2.0.35/srclib/apr-util/include  -c ssl_engine_kernel.c &&
touch ssl_engine_kernel.lo
ssl_engine_kernel.c:1809: conflicting types for `ssl_callback_LogTracingState'
mod_ssl.h:639: previous declaration of `ssl_callback_LogTracingState'
make[3]: *** [ssl_engine_kernel.lo] Error 1
make[3]: Leaving directory `/home/issac/httpd-2.0.35/modules/ssl'
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory `/home/issac/httpd-2.0.35/modules/ssl'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/home/issac/httpd-2.0.35/modules'
make: *** [all-recursive] Error 1
Comment 1 Doug MacEachern 2002-04-08 02:56:42 UTC
this has been fixed in cvs.
quick fix can be done by hand if you edit mod_ssl.h and change this line:
#if SSL_LIBRARY_VERSION >= 0x00907000
to
if 0