PR: 7802 Obtained from: Submitted by: Reviewed by: fix compilation problem in ssl_engine_kernel.c if SSL_LIBRARY_VERSION >= 0x00907000

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk/modules/ssl@94527 13f79535-47bb-0310-9956-ffa450edef68