mod_ssl.h
@@ -636,11 +636,7 @@ int          ssl_callback_proxy_cert(SSL *ssl, X509 **x509, EVP_PKEY **pkey);
 int          ssl_callback_NewSessionCacheEntry(SSL *, SSL_SESSION *);
 SSL_SESSION *ssl_callback_GetSessionCacheEntry(SSL *, unsigned char *, int, int *);
 void         ssl_callback_DelSessionCacheEntry(SSL_CTX *, SSL_SESSION *);
-#if SSL_LIBRARY_VERSION >= 0x00907000
-void         ssl_callback_LogTracingState(const SSL *, int, int);
-#else
 void         ssl_callback_LogTracingState(SSL *, int, int);
-#endif
 
 /*  Session Cache Support  */
 void         ssl_scache_init(server_rec *, apr_pool_t *);
